[package]
name = "rs-miniredis"
version = "0.1.0"
edition = "2024"
authors = [
    "Emeka Allison <emeka.allison4@gmail.com>",
    "Victory Aghazie <professionalvicks@gmail.com>",
    "Samuel Achilike <samuel.e.achilike@gmail.com>",
    "Salama Jatau <salamajatau@gmail.com>",
    "Ajaezo Kingsley <ajaezokingsley@gmail.com>",
    "Hadassah <tommy4gold@gmail.com>",
]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }


[[bin]]
name = "rs-miniredis"
path = "src/main.rs"

[lib]
name = "rs_miniredis"
path = "src/lib.rs"
